# smolseek

./: .gitignore  JETSON_MANIFEST.md  README.md
game/: README.md
game/coordinator/: __main__.py  config.py  coordinator.py  game_ws_server.py  models.py
game/openclaw-unlink/: SKILL.md
game/openclaw-unlink/references/: api-endpoints.md  unlink-sdk.md
game/openclaw-unlink/scripts/: unlink-add-liquidity.sh  unlink-address.sh  unlink-balance.sh  unlink-bid-list.sh  unlink-bid-verify.sh  unlink-burner.sh  unlink-deploy-token.sh  unlink-distribute.sh  unlink-mint.sh  unlink-pool.sh  unlink-status.sh  unlink-swap.sh  unlink-sync.sh  unlink-tokens.sh
game/scripts/: demo.sh  run_integration.sh
game/tests/: integration_test.py  mock_jetson.py  mock_unlink.py
game/unlink-service/: package-lock.json  package.json
game/unlink-service/src/: escrow.ts  index.ts
game/unlink-service/src/contracts/: MintableERC20.ts
game/unlink-service/src/routes/: balance.ts  bid.ts  distribute.ts  liquidity.ts  swap.ts
game/web/: package-lock.json  package.json  vite.config.ts
game/web/.storybook/: main.ts  preview.tsx
game/web/src/: App.css  App.tsx  index.css  main.tsx  types.ts  wagmi.ts
game/web/src/components/: BidPanel.tsx  CacheCard.tsx  CameraFeed.tsx  ConnectionBadge.tsx  EscrowPool.tsx  Leaderboard.tsx  (+6 more)
scripts/: jetson_start_all.sh  smolseek-stack.service
src/ugv_map_bridge/: package.xml  setup.cfg  setup.py
src/ugv_map_bridge/launch/: autonomous_mapping.launch.py
src/ugv_map_bridge/ugv_map_bridge/: map_bridge_node.py  nav2_goal_sender.py  point_cloud_ws.py
(+10 files in other folders)
