<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_map_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between stella_vslam and Babylon.js 3D viewer via WebSocket</description>
  <maintainer email="eric@example.com">Eric Manganaro</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-msgpack</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
